@@ -38,7 +38,6 @@ AM_LDFLAGS = \
 	$(INTLLIBS)		\
 	$(NWAM_LIBS)		\
 	$(DLADM_LIBS)		\
-	$(INETCFG_LIBS)		\
 	$(KSTAT_LIBS)		\
 	$(SECDB_LIBS)		\
 	$(SCF_LIBS)		\
